# frozen_string_literal: true

class DocumentForm < ImportForm
  attr_reader :document

  #
  # @param [Hash] attributes
  # @param [Hash] options
  #
  # @option options [Boolean] :import_retry Indicate if we should retry import on failure.
  #
  def initialize(attributes = {}, options = {})
    super
  end

  #
  # @return [Boolean]
  #
  def save
    super do
      @document = build_document
      @document.update(reimported: true)
    end
  end

  private

  def after_reimport_hook
    # TBD
  rescue StandardError => e
    @document.update(reimported: false) if @document.present?
    raise e
  end

  def build_document
    service = DocumentBuildService.new(google_credentials, import_retry: options[:import_retry])
    result = service.build_for(link)
    @service_errors.push(*service.errors.uniq)
    result
  end

  def file_id
    ::Lt::Lcms::Lesson::Downloader::Base.file_id_for link
  end
end
